github: return comment id